--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 
 <html lang="es" class"no-js">
 
- <!-- Hola soy un comentario...  -->
+
 
 
 <head>
 	
 	<meta charset="UTF-8">
 	<meta content="Yuri Paola Vela Herrera" name="author"/>
-    <meta content="Objeto virtual de aprendizaje UNAD" name="description" />
+    <meta content="Objeto Virtual de Aprendizaje UNAD" name="description" />
     <meta content="educación, unad, aprender" name="keywords" />
 	<title>Objeto Virtual</title>
 	<link rel="stylesheet" href="css/normalize.css">
-	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light|Indie+Flower' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Libre+Franklin" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Chivo" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -24,26 +26,36 @@
 
 <Div id="contenidos">
 	<header>
-		<h1>HTML5 PRUEBA 3</h1>
-		<h2>Curso Diseño de Sitios web</h2>
+	
+		<figure>
+			<img src="img/logo_UNAD.jpg" alt="Logo">
+			
+		</figure>
+	<h1>Objeto Virtual de Aprendizaje para Diseño de Sitios Web</h1>
+    
+	
+		
 	</header>
 
 <nav>
 	<ul class="menu">
-		<li><a href="http://www.google.com" class="menu">Google</a></li>
-		<li><a href="http://www.unad.edu.co"class="menu">Universidad UNAD</a></li>
-		<li><a href="httP://www.enter.co" class="menu">Revista Enter</a></li>
+		<li><a href="#" class="menu">Inicio</a></li>
+		<li><a href="#"class="menu">Lecturas</a></li>
+		<li><a href="#"class="menu">Multimedia</a></li>
+		<li><a href="#"class="menu">Actividades</a></li>
+		<li><a href="#"class="menu">Autores</a></li>
+		
 	</ul>
 </nav>
 
 <section>
 	<article>
-		<h2>Computador portatil</h2>
+		<h4>Ambientes Virtuales de Aprendizaje</h4>
 		<figure>
-			<img src="img/pc.jpg" alt="Computador Portatil">
+			<img src="img/estudiantes.jpg" alt="Ambientes Virtuales de Aprendizaje">
 			<figcaption>
 				<span>
-				imagen computador<a href="http://www.hp.com" class="menu">Computador Portatil</a>
+				Ambientes Virtuales de Aprendizaje:<a href="https://www.unad.edu.co/" class="menu">Ambientes Virtuales</a>
 				</span>
 			</figcaption>
 		</figure>
@@ -56,13 +68,28 @@
 
 <aside>
     <ul>
-		<li><a href="http://www.google.com">Google</a></li>
-		<li><a href="http://www.unad.edu.co">Universidad UNAD</a></li>
-		<li><a href="httP://www.enter.co">Revista Enter</a></li>
+		<h2>SITIOS DE INTERÉS</h2>
+		<p>
+    	RADIO UNAD VIRTUAL: Emisora que se transmite por IP a nivel internacional, su programación habitual está dirigida a usuarios en general y en especial a la comunidad universitaria interesada en temas culturales, científicos, investigativos y formativos, una emisión que permitirá acoplarse en ambientes de trabajo y estudio.
+    	</p>
+		<p>
+		Escríbenos a: ruvunad@unad.edu.co
+		Skype: ruvunad1
+		
+		</p>
+		<p>
+		CANAL UNAD: Espacio donde cada una de las áreas de la Universidad Nacional Abierta y a Distancia (UNAD) podrán participar con propuestas audiovisuales. Aquí encontrarán un espacio para la emisión de sus proyectos y podrán disponer de un espacio para desarrollar temáticas de interés dirigida al público en general y la comunidad universitaria. 
+		</p>
+		
 	</ul>	
 </aside>
 
-<Footer><h3>Copyright Todos los Derechos Reservados</h3></Footer>
+<Footer><p>
+	Dirección Sede Nacional: Calle 14 Sur N° 14-23
+    - PBX: (+57) 13443700 Bogotá D.C. Colombia
+    - Correo Electrónico: atencionalusuario@unad.edu.co
+</p> 
+</Footer>
 
 
 
