--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <section>
 	<article>
-		<h4>Ambientes Virtuales de Aprendizaje</h4>
+		<h2>AMBIENTES VIRTUALES DE APRENDIZAJE</h2>
 		<figure>
 			<img src="img/estudiantes.jpg" alt="Ambientes Virtuales de Aprendizaje">
 			<figcaption>
@@ -69,22 +69,21 @@
 <aside>
     <ul>
 		<h2>SITIOS DE INTERÉS</h2>
-		<p>
+		<p id="left">
     	RADIO UNAD VIRTUAL: Emisora que se transmite por IP a nivel internacional, su programación habitual está dirigida a usuarios en general y en especial a la comunidad universitaria interesada en temas culturales, científicos, investigativos y formativos, una emisión que permitirá acoplarse en ambientes de trabajo y estudio.
     	</p>
 		
-		<p>
+		<p id="left">
 		CANAL UNAD: Espacio donde cada una de las áreas de la Universidad Nacional Abierta y a Distancia (UNAD) podrán participar con propuestas audiovisuales. Aquí encontrarán un espacio para la emisión de sus proyectos y podrán disponer de un espacio para desarrollar temáticas de interés dirigida al público en general y la comunidad universitaria. 
 		</p>
 		
 	</ul>	
 </aside>
 
-<Footer><p>
-	Dirección Sede Nacional: Calle 14 Sur N° 14-23
+<Footer>
+	<h5>Dirección: Calle 14 Sur N 14-23
     - PBX: (+57) 13443700 Bogotá D.C. Colombia
-    - Correo Electrónico: atencionalusuario@unad.edu.co
-</p> 
+    - E-mail: atencionalusuario@unad.edu.co</h5>
 </Footer>
 
 
